--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>livelybot_serial</name>
   <version>0.0.0</version>
-  <description>The livelybot_serial package</description>
+  <description>The serial package</description>
   <maintainer email="hpx@todo.todo">hpx</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
@@ -15,8 +15,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <!-- <depend>serial</depend> -->
-  <!-- <depend>livelybotserial</depend> -->
+  <depend>serial</depend>
   <depend>livelybot_msg</depend>
 
 </package>
