update code structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,27 +13,34 @@ set(pthread_LIBRARIES pthread)
 set(serial_SRCS
     include/hardware/robot.h
     include/hardware/motor.h
-    src/lively_serial.cc
-    src/hardware/motor.cc
+    src/lively_serial.cpp
+    src/hardware/canport.cpp
+    src/hardware/canboard.cpp
+    src/hardware/motor.cpp
+    src/hardware/robot.cpp
 )
+
+include_directories(
+    include
+    ${catkin_INCLUDE_DIRS}
+)
+
 catkin_package(
     LIBRARIES ${PROJECT_NAME}
     INCLUDE_DIRS include
     DEPENDS rt pthread
     CATKIN_DEPENDS roscpp std_msgs livelybot_msg serial
 )
+
 add_library(${PROJECT_NAME} ${serial_SRCS})
 target_link_libraries(${PROJECT_NAME} rt pthread)
-include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-)
-# test
-add_executable(lvbot_test src/serial_t.cpp ${serial_SRCS})
-target_link_libraries(lvbot_test ${catkin_LIBRARIES})
 
-add_executable(test_motor_run src/test_motor_run.cpp ${serial_SRCS})
-target_link_libraries(test_motor_run ${catkin_LIBRARIES})
+# test
+# add_executable(lvbot_test src/serial_t.cpp ${serial_SRCS})
+# target_link_libraries(lvbot_test ${catkin_LIBRARIES})
+
+# add_executable(test_motor_run src/test_motor_run.cpp ${serial_SRCS})
+# target_link_libraries(test_motor_run ${catkin_LIBRARIES})
 
 add_executable(test_motor src/test_motor.cpp ${serial_SRCS})
 target_link_libraries(test_motor ${catkin_LIBRARIES})
@@ -46,4 +53,4 @@ install(TARGETS ${PROJECT_NAME}
 
 ## Install headers
 install(FILES include/hardware/robot.h include/hardware/motor.h
-  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}/livelybot_serial)
+    DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}/livelybot_serial)
